--- a/app/src/main/res/layout/add_reminder.xml
+++ b/app/src/main/res/layout/add_reminder.xml
@@ -12,18 +12,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="sans-serif"
         android:text="Add a new reminder:"
         android:textColor="#000000"
         android:textSize="36sp"
         android:textStyle="normal" />
 
+    <Spinner
+        android:id="@+id/reminder_type_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="25dp"
+        android:layout_marginHorizontal="75dp"
+        android:textSize="36sp"
+        android:outlineProvider="paddedBounds" />
+
+
     <EditText
         android:id="@+id/editAddReminder"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:hint="Type here"
         android:background="@drawable/note_shape"
         android:textAlignment="center" />
