--- a/app/src/main/res/layout/add_reminder.xml
+++ b/app/src/main/res/layout/add_reminder.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="70dp"
         android:fontFamily="sans-serif"
         android:text="Add a new reminder:"
         android:textColor="#000000"
@@ -37,6 +37,41 @@
         android:hint="Type here"
         android:background="@drawable/note_shape"
         android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif"
+        android:text="Reminder time (leave empty for no notification)"
+        android:textColor="#707070"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <EditText
+            android:id="@+id/editAddDate"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:hint="DD.MM.YYY"
+            android:textAlignment="center" />
+
+        <EditText
+            android:id="@+id/editAddTime"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:hint="mm:hh"
+            android:textAlignment="center" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnLogin"
